# api/doc/swagger/swagger.json
@@ -15,6 +15,510 @@
   },
   "basePath": "/",
   "paths": {
+    "/api/v1/data-semantic/{id}/business-objects": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "查询业务对象识别结果",
+        "operationId": "dataSemanticGetBusinessObjects",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "object_id",
+            "in": "query",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "keyword",
+            "in": "query",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "current_version": {
+                  "type": "integer"
+                },
+                "list": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "required": [
+                      "id",
+                      "object_name",
+                      "attributes"
+                    ],
+                    "properties": {
+                      "attributes": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "required": [
+                            "id",
+                            "attr_name",
+                            "form_view_field_id",
+                            "field_tech_name",
+                            "field_business_name",
+                            "field_role",
+                            "field_type"
+                          ],
+                          "properties": {
+                            "attr_name": {
+                              "type": "string"
+                            },
+                            "field_business_name": {
+                              "type": "string"
+                            },
+                            "field_role": {
+                              "type": "integer"
+                            },
+                            "field_tech_name": {
+                              "type": "string"
+                            },
+                            "field_type": {
+                              "type": "string"
+                            },
+                            "form_view_field_id": {
+                              "type": "string"
+                            },
+                            "id": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      },
+                      "id": {
+                        "type": "string"
+                      },
+                      "object_name": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "保存业务对象及属性",
+        "operationId": "dataSemanticSaveBusinessObjects",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "type",
+                "id",
+                "name"
+              ],
+              "properties": {
+                "id": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "type": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "删除识别结果",
+        "operationId": "dataSemanticDeleteBusinessObjects",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/data-semantic/{id}/business-objects/attributes/move": {
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "调整属性归属业务对象",
+        "operationId": "dataSemanticMoveAttribute",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "attribute_id",
+                "target_object_uuid"
+              ],
+              "properties": {
+                "attribute_id": {
+                  "type": "string"
+                },
+                "target_object_uuid": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "attribute_id": {
+                  "type": "string"
+                },
+                "business_object_id": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/data-semantic/{id}/business-objects/regenerate": {
+      "post": {
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "重新识别业务对象",
+        "operationId": "dataSemanticRegenerateBusinessObjects",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "attribute_count": {
+                  "type": "integer"
+                },
+                "object_count": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/data-semantic/{id}/fields": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "查询字段语义补全数据",
+        "operationId": "dataSemanticGetFields",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "keyword",
+            "in": "query",
+            "required": true
+          },
+          {
+            "type": "boolean",
+            "name": "only_incomplete",
+            "in": "query",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "current_version": {
+                  "type": "integer"
+                },
+                "fields": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "required": [
+                      "form_view_field_id",
+                      "field_business_name",
+                      "field_tech_name",
+                      "field_type",
+                      "field_role",
+                      "field_description"
+                    ],
+                    "properties": {
+                      "field_business_name": {
+                        "type": "string"
+                      },
+                      "field_description": {
+                        "type": "string"
+                      },
+                      "field_role": {
+                        "type": "integer"
+                      },
+                      "field_tech_name": {
+                        "type": "string"
+                      },
+                      "field_type": {
+                        "type": "string"
+                      },
+                      "form_view_field_id": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                },
+                "table_business_name": {
+                  "type": "string"
+                },
+                "table_description": {
+                  "type": "string"
+                },
+                "table_tech_name": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/data-semantic/{id}/generate": {
+      "post": {
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "一键生成理解数据",
+        "operationId": "dataSemanticGenerateUnderstanding",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "understand_status": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/data-semantic/{id}/semantic-info": {
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "保存库表信息补全数据",
+        "operationId": "dataSemanticSaveSemanticInfo",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "tableData",
+                "fieldData"
+              ],
+              "properties": {
+                "fieldData": {
+                  "type": "object",
+                  "required": [
+                    "id",
+                    "field_business_name",
+                    "field_role",
+                    "field_description"
+                  ],
+                  "properties": {
+                    "field_business_name": {
+                      "type": "string"
+                    },
+                    "field_description": {
+                      "type": "string"
+                    },
+                    "field_role": {
+                      "type": "integer"
+                    },
+                    "id": {
+                      "description": "t_form_view_field_info_temp.id，用于 upsert 操作",
+                      "type": "string"
+                    }
+                  }
+                },
+                "tableData": {
+                  "type": "object",
+                  "required": [
+                    "id",
+                    "table_business_name",
+                    "table_description"
+                  ],
+                  "properties": {
+                    "id": {
+                      "description": "t_form_view_info_temp.id，用于 upsert 操作",
+                      "type": "string"
+                    },
+                    "table_business_name": {
+                      "type": "string"
+                    },
+                    "table_description": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/data-semantic/{id}/status": {
       "get": {
         "produces": [
@@ -51,6 +555,42 @@
         }
       }
     },
+    "/api/v1/data-semantic/{id}/submit": {
+      "post": {
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "提交确认理解数据",
+        "operationId": "dataSemanticSubmitUnderstanding",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/health": {
       "get": {
         "produces": [
@@ -77,7 +617,7 @@
       }
     }
   },
-  "x-date": "2026-02-04 11:15:46",
+  "x-date": "2026-02-04 14:53:09",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
