# model/data_understanding/business_object/vars.go
@@ -1,17 +1,5 @@
 // Package business_object 业务对象正式表Model
 package business_object
 
-var (
-	// field names
-	fieldId             = "id"
-	fieldObjectName     = "object_name"
-	fieldObjectType     = "object_type"
-	fieldFormViewId     = "form_view_id"
-	fieldStatus         = "status"
-	fieldCreatedAt      = "created_at"
-	fieldUpdatedAt      = "updated_at"
-	fieldDeletedAt      = "deleted_at"
-
-	// table name
-	tableName = "t_business_object"
-)
+// Table 表名
+const Table = "t_business_object"
