# model/data_understanding/business_object_attributes/types.go
@@ -5,14 +5,14 @@ import "time"
 
 // BusinessObjectAttributes 业务对象属性正式表结构
 type BusinessObjectAttributes struct {
-	Id                 string     `db:"id"`
-	FormViewId         string     `db:"form_view_id"`
-	BusinessObjectId   string     `db:"business_object_id"`
-	FormViewFieldId    string     `db:"form_view_field_id"`
-	AttrName           string     `db:"attr_name"`
-	CreatedAt          time.Time  `db:"created_at"`
-	UpdatedAt          time.Time  `db:"updated_at"`
-	DeletedAt          *time.Time `db:"deleted_at"`
+	Id               string     `db:"id"`
+	FormViewId       string     `db:"form_view_id"`
+	BusinessObjectId string     `db:"business_object_id"`
+	FormViewFieldId  string     `db:"form_view_field_id"`
+	AttrName         string     `db:"attr_name"`
+	CreatedAt        time.Time  `db:"created_at"`
+	UpdatedAt        time.Time  `db:"updated_at"`
+	DeletedAt        *time.Time `db:"deleted_at"`
 }
 
 // TableName 表名
