# model/data_understanding/business_object_attributes/vars.go
@@ -1,17 +1,5 @@
 // Package business_object_attributes 业务对象属性正式表Model
 package business_object_attributes
 
-var (
-	// field names
-	fieldId               = "id"
-	fieldFormViewId       = "form_view_id"
-	fieldBusinessObjectId = "business_object_id"
-	fieldFormViewFieldId  = "form_view_field_id"
-	fieldAttrName         = "attr_name"
-	fieldCreatedAt        = "created_at"
-	fieldUpdatedAt        = "updated_at"
-	fieldDeletedAt        = "deleted_at"
-
-	// table name
-	tableName = "t_business_object_attributes"
-)
+// Table 表名
+const Table = "t_business_object_attributes"
